# opengraphdb

./: .dockerignore  .gitignore  .mcp.json  .release-please-manifest.json  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  IMPLEMENTATION-READY.md  README.md  SECURITY.md  SPEC.md  cbindgen.toml  deny.toml  marketplace.json  release-please-config.json  rust-toolchain.toml
crates/ogdb-algorithms/: Cargo.toml
crates/ogdb-algorithms/src/: lib.rs
crates/ogdb-algorithms/tests/: api_smoke.rs
crates/ogdb-bench/: Cargo.toml  README.md
crates/ogdb-bench/benches/: rag_benchmark.rs  throughput_benches.rs
crates/ogdb-bench/src/: main.rs
crates/ogdb-bench/tests/: rag_accuracy.rs  write_throughput_regression.rs
crates/ogdb-bolt/: Cargo.toml
crates/ogdb-bolt/src/: lib.rs
crates/ogdb-bolt/tests/: ack_failure_smoke.rs  bolt_size_cap.rs  bolt_v3_handshake.rs  bolt_v4_run_pull_commit.rs  non_exhaustive_invariant.rs  pull_all_smoke.rs
crates/ogdb-cli/: Cargo.toml  build.rs
crates/ogdb-cli/src/: init_agent.rs  lib.rs  main.rs  prom_metrics.rs  static_assets.rs
crates/ogdb-cli/tests/: cli_e2e_subcommands.rs  db_global_flag.rs  demo_datasets_seed.rs  demo_subcommand.rs  grpc_unimplemented.rs  http_backup_smoke.rs  http_cors.rs  http_import_count.rs  http_index_delete_smoke.rs  http_mcp.rs  http_mcp_cosmetic_gaps.rs  http_metrics_detailed_smoke.rs  http_post_bare_return.rs  http_post_query_accepts_unwind.rs  http_prometheus.rs  http_schema_evolve_smoke.rs  http_security.rs  http_security_headers.rs  http_static_assets.rs  init_agent_integration.rs  mcp_roundtrip.rs  movielens_import.rs  rdf_import_edge_type_case.rs  readme_cli_listing.rs  readme_headline_query_returns_rows.rs  shacl_validation.rs
crates/ogdb-core/: Cargo.toml
crates/ogdb-core/src/: compression.rs  concurrency.rs  errors.rs  header.rs  lib.rs  metrics.rs  platform_io.rs
crates/ogdb-core/tests/: bare_return_literal.rs  c2_a5_hnsw_skip_rebuild_on_unrelated_property.rs  c2_a6_ingest_document_propagates_rebuild_error.rs  c3_h6_format_version_constants_pub.rs  concurrent_inserts_do_not_corrupt_index.rs  cypher_function_registry.rs  cypher_is_not_null.rs  cypher_lex_comment_overlap.rs  cypher_optional_match_left_outer.rs  cypher_order_by_non_projected.rs  dberror_non_exhaustive.rs  hnsw_matches_brute_force_on_tiny_fixture.rs  hnsw_no_rebuild_on_unrelated_commit.rs  hnsw_query_under_5ms_p95_at_10k.rs  hnsw_recall_at_10_over_0_95_at_10k.rs  hnsw_survives_drop_and_reopen.rs  index_scan_phantom_read_caveat.rs  meta_json_no_growth_on_writes.rs  must_use_on_hot_api.rs  ogdb_algorithms_reexport_shim.rs  ogdb_export_reexport_shim.rs  ogdb_import_reexport_shim.rs  ogdb_temporal_reexport_shim.rs  ogdb_text_reexport_shim.rs  ogdb_types_reexport_shim.rs  ogdb_vector_reexport_shim.rs  proptest_atomicity.rs  public_enums_non_exhaustive.rs  rollback_rebuilds_label_projections.rs  temporal_versioning.rs  unwind_empty_list_yields_zero_rows.rs  unwind_literal_list.rs  unwind_over_stored_list_property.rs  unwind_range_three_arg_with_step.rs  unwind_range_two_arg.rs  unwind_then_create_persists_all_rows.rs  upgrade_fixture_v0_4_0_opens_on_current.rs  upgrade_fixture_v0_5_0_opens_on_current.rs  vector_search_direct.rs  wal_record_reader_adversarial.rs  (+5 more)
crates/ogdb-e2e/: Cargo.toml
crates/ogdb-e2e/src/: lib.rs
crates/ogdb-e2e/tests/: comprehensive_e2e.rs
crates/ogdb-eval/: Cargo.toml  build.rs
crates/ogdb-eval/src/: lib.rs  skill_regression.rs
crates/ogdb-eval/src/drivers/: ai_agent.rs  cli_runner.rs  common.rs  criterion_ingest.rs  governor.rs  graphalytics.rs  ldbc_mini.rs  ldbc_snb.rs  mod.rs  multi_iter.rs  resources.rs  scaling.rs  (+2 more)
crates/ogdb-eval/tests/: ai_agent_driver.rs  baseline_includes_skill_quality.rs  cli_runner.rs  criterion_ingest_driver.rs  diff_engine.rs  git_sha_in_baseline.rs  graphalytics_driver.rs  history_append.rs  ldbc_mini_fixture.rs  ldbc_snb_is1_driver.rs  ldbc_submission.rs  multi_iter_aggregation.rs  publish_baseline.rs  read_path_warmup.rs  real_llm_adapter_anthropic.rs  real_llm_adapter_errors.rs  real_llm_adapter_factory.rs  real_llm_adapter_local.rs  real_llm_adapter_local_errors.rs  real_llm_adapter_mod_internals.rs  real_llm_adapter_openai.rs  real_llm_adapter_openai_errors.rs  resources_driver.rs  scaling_driver.rs  schema_roundtrip.rs  skill_quality_adapter.rs  skill_quality_aggregator.rs  skill_quality_driver.rs  skill_quality_loader.rs  skill_quality_scorer.rs  skill_regression_diff.rs  skill_regression_history.rs  skill_regression_report.rs  skill_regression_threshold.rs  throughput_driver.rs
crates/ogdb-export/: Cargo.toml
crates/ogdb-export/src/: lib.rs
crates/ogdb-export/tests/: api_smoke.rs
crates/ogdb-ffi/: Cargo.toml
crates/ogdb-ffi/src/: lib.rs
crates/ogdb-ffi/tests/: ffi_smoke.rs
crates/ogdb-fuzz/: Cargo.toml  README.md
crates/ogdb-fuzz/fuzz/: Cargo.toml
crates/ogdb-fuzz/src/: lib.rs
crates/ogdb-fuzz/tests/: targets_compile.rs
crates/ogdb-import/: Cargo.toml
crates/ogdb-import/src/: lib.rs
crates/ogdb-import/tests/: api_smoke.rs  non_exhaustive_invariant.rs  parsers.rs
crates/ogdb-node/: Cargo.toml  index.d.ts  index.js  package.json
crates/ogdb-node/src/: lib.rs
crates/ogdb-node/tests/: basic.test.js  binding_smoke.rs
crates/ogdb-python/: Cargo.toml  pyproject.toml
crates/ogdb-python/src/: lib.rs
crates/ogdb-python/tests/: binding_smoke.rs  test_basic.py
crates/ogdb-tck/: Cargo.toml  README.md
crates/ogdb-tck/src/: lib.rs  main.rs
crates/ogdb-temporal/: Cargo.toml
crates/ogdb-temporal/src/: lib.rs
crates/ogdb-temporal/tests/: api_smoke.rs  non_exhaustive_invariant.rs
crates/ogdb-text/: Cargo.toml
crates/ogdb-text/src/: lib.rs
crates/ogdb-text/tests/: api_smoke.rs
crates/ogdb-types/: Cargo.toml
crates/ogdb-types/src/: lib.rs
crates/ogdb-types/tests/: api_smoke.rs  non_exhaustive_invariant.rs
crates/ogdb-vector/: Cargo.toml
crates/ogdb-vector/src/: lib.rs
crates/ogdb-vector/tests/: api_smoke.rs  non_exhaustive_invariant.rs
(+923 files in other folders)
