[workspace]
members = [
  "crates/ogdb-core",
  "crates/ogdb-vector",
  "crates/ogdb-types",
  "crates/ogdb-algorithms",
  "crates/ogdb-text",
  "crates/ogdb-temporal",
  "crates/ogdb-import",
  "crates/ogdb-bolt",
  "crates/ogdb-cli",
  "crates/ogdb-e2e",
  "crates/ogdb-bench",
  "crates/ogdb-eval",
  "crates/ogdb-export",
  "crates/ogdb-tck",
  "crates/ogdb-ffi",
  "crates/ogdb-python",
  "crates/ogdb-node",
  "crates/ogdb-fuzz",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
# EVAL-PERF-RELEASE Finding 7 (HIGH) + EVAL-RUST-QUALITY: cargo publish requires
# description / repository / homepage on every crate. We declare them once
# at the workspace level; per-crate Cargo.toml inherits via
# `description.workspace = true` etc.
authors = ["OpenGraphDB contributors"]
description = "OpenGraphDB — embedded graph + vector + full-text database. Single binary, Apache-2.0 licensed, agent-native."
repository = "https://github.com/asheshgoplani/opengraphdb"
homepage = "https://github.com/asheshgoplani/opengraphdb"
documentation = "https://docs.rs/ogdb-core"
keywords = ["graph", "vector", "database", "embedded", "agent"]
categories = ["database", "data-structures", "science"]
readme = "README.md"
rust-version = "1.88"

# EVAL-RUST-QUALITY-CYCLE2 H10 (HIGH): centralise common dep pins so a bump
# touches one line, not eight. Each crate Cargo.toml references these via
# `serde.workspace = true` etc. Crates that need extra features layer them
# in per-crate (e.g. the napi/pyo3 feature flags stay local).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# EVAL-RUST-QUALITY-CYCLE3 H13: bumped 1 → 2 to consolidate Cargo.lock
# (transitive deps already pulled thiserror 2; we shipped two majors).
thiserror = "2"
tempfile = "3"
libc = "0.2"
proptest = { version = "1", default-features = false, features = ["std"] }

# EVAL-RUST-QUALITY-CYCLE2 H11 (HIGH): single source of truth for safety- and
# discipline-oriented lints. Each crate Cargo.toml opts in with
# `[lints] workspace = true`. Noisy lint groups (clippy::pedantic, the cast
# group, must_use_candidate) are tracked as follow-ups (cycle 3) — enabling
# them today would generate hundreds of warnings in ogdb-core and break the
# `cargo clippy -- -D warnings` gate. The two below are the highest-leverage
# safety lints that already fit cleanly into the workspace.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
# `cfg(coverage)` is set by `cargo llvm-cov` instrumentation in ogdb-core's
# coverage harness. Declaring it here keeps `unexpected_cfgs` quiet.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"

# Cross-crate inlining for the IS-1 hot path. The 5 ogdb-core-split-* refactors
# (vector/algorithms/text/temporal/import) moved plain-data types and pure
# helpers out of ogdb-core into sibling crates; without LTO the optimizer does
# not inline across crate boundaries, which costs ~25% on the 1-hop Cypher
# property-fetch benchmark.
[profile.release]
lto = "thin"
codegen-units = 1
