[workspace]
members = [
  "crates/ogdb-core",
  "crates/ogdb-vector",
  "crates/ogdb-types",
  "crates/ogdb-algorithms",
  "crates/ogdb-text",
  "crates/ogdb-temporal",
  "crates/ogdb-import",
  "crates/ogdb-bolt",
  "crates/ogdb-cli",
  "crates/ogdb-e2e",
  "crates/ogdb-bench",
  "crates/ogdb-eval",
  "crates/ogdb-export",
  "crates/ogdb-tck",
  "crates/ogdb-ffi",
  "crates/ogdb-python",
  "crates/ogdb-node",
  "crates/ogdb-fuzz",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
# EVAL-PERF-RELEASE Finding 7 (HIGH) + EVAL-RUST-QUALITY: cargo publish requires
# description / repository / homepage on every crate. We declare them once
# at the workspace level; per-crate Cargo.toml inherits via
# `description.workspace = true` etc.
authors = ["OpenGraphDB contributors"]
description = "OpenGraphDB — embedded graph + vector + full-text database. Single binary, Apache-2.0 licensed, agent-native."
repository = "https://github.com/asheshgoplani/opengraphdb"
homepage = "https://github.com/asheshgoplani/opengraphdb"
documentation = "https://docs.rs/ogdb-core"
keywords = ["graph", "vector", "database", "embedded", "agent"]
categories = ["database", "data-structures", "science"]
readme = "README.md"
rust-version = "1.88"

# EVAL-RUST-QUALITY-CYCLE2 H10 (HIGH): centralise common dep pins so a bump
# touches one line, not eight. Each crate Cargo.toml references these via
# `serde.workspace = true` etc. Crates that need extra features layer them
# in per-crate (e.g. the napi/pyo3 feature flags stay local).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# EVAL-RUST-QUALITY-CYCLE3 H13: bumped 1 → 2 to consolidate Cargo.lock
# (transitive deps already pulled thiserror 2; we shipped two majors).
thiserror = "2"
tempfile = "3"
libc = "0.2"
proptest = { version = "1", default-features = false, features = ["std"] }

# EVAL-RUST-QUALITY-CYCLE2 H11 (HIGH): single source of truth for safety- and
# discipline-oriented lints. Each crate Cargo.toml opts in with
# `[lints] workspace = true`. Noisy lint groups (clippy::pedantic, the cast
# group, must_use_candidate) are tracked as follow-ups (cycle 3) — enabling
# them today would generate hundreds of warnings in ogdb-core and break the
# `cargo clippy -- -D warnings` gate. The two below are the highest-leverage
# safety lints that already fit cleanly into the workspace.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
# `cfg(coverage)` is set by `cargo llvm-cov` instrumentation in ogdb-core's
# coverage harness. Declaring it here keeps `unexpected_cfgs` quiet.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"
# EVAL-RUST-QUALITY-CYCLE3 H6: cycle-3 lights up the cast / must_use /
# pedantic discipline cycle 2 explicitly deferred. Each entry below is
# either a tightening (warn / deny) or a deliberate ratchet (allow with
# a documented rationale) — the table is the single source of truth so
# cycle 4 can flip an `allow` to `warn` lint-by-lint. With
# `cargo clippy -- -D warnings`, every `warn` here is a hard CI gate.
#
# Started at `allow` with `priority = -1` (group level) so the rest of
# the table can selectively re-enable individual lints with `warn`.
# Pedantic-as-warn would generate ~hundreds of warnings in ogdb-core
# (proven by experimentation) and is gated as a per-cycle ratchet.
pedantic = { level = "allow", priority = -1 }
# `must_use_candidate` was attempted at `warn` for cycle 3 — auto-fix
# tagged ~30 sites across the split crates (ogdb-vector, ogdb-temporal,
# ogdb-import) but ogdb-core + ogdb-cli alone retain ~150 unattributed
# pub methods. Held at `allow` for cycle 3; cycle 4 should flip to
# `warn` after the per-module split (N20) makes the remaining ratchet
# tractable. The cycle-2 H7 #[must_use]'s on the highest-leverage
# public APIs (Database::query, lex_cypher, parse_cypher,
# Database::neighbors, Database::shortest_path, SharedDatabase::open)
# stay in place.
must_use_candidate = "allow"
# Cast-discipline lints are the most-valuable correctness lints in the
# pedantic group. Held at `allow` for cycle 3 because ogdb-core has
# ~297 unmarked `as` casts on `u64 → usize` (silent truncation on a
# 32-bit target) — fixing them is an ogdb-core-internal refactor (N20
# split). Cycle 4 should flip these to `warn` after the per-module
# split lands.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"

# Cross-crate inlining for the IS-1 hot path. The 5 ogdb-core-split-* refactors
# (vector/algorithms/text/temporal/import) moved plain-data types and pure
# helpers out of ogdb-core into sibling crates; without LTO the optimizer does
# not inline across crate boundaries, which costs ~25% on the 1-hop Cypher
# property-fetch benchmark.
[profile.release]
lto = "thin"
codegen-units = 1
