[workspace]
members = [
  "crates/ogdb-core",
  "crates/ogdb-vector",
  "crates/ogdb-types",
  "crates/ogdb-algorithms",
  "crates/ogdb-text",
  "crates/ogdb-temporal",
  "crates/ogdb-import",
  "crates/ogdb-bolt",
  "crates/ogdb-cli",
  "crates/ogdb-e2e",
  "crates/ogdb-bench",
  "crates/ogdb-eval",
  "crates/ogdb-export",
  "crates/ogdb-tck",
  "crates/ogdb-ffi",
  "crates/ogdb-python",
  "crates/ogdb-node",
  "crates/ogdb-fuzz",
]
resolver = "2"

[workspace.package]
version = "0.5.1"
edition = "2021"
license = "Apache-2.0"
# EVAL-PERF-RELEASE Finding 7 (HIGH) + EVAL-RUST-QUALITY: cargo publish requires
# description / repository / homepage on every crate. We declare them once
# at the workspace level; per-crate Cargo.toml inherits via
# `description.workspace = true` etc.
authors = ["OpenGraphDB contributors"]
description = "OpenGraphDB — embedded graph + vector + full-text database. Single binary, Apache-2.0 licensed, agent-native."
repository = "https://github.com/asheshgoplani/opengraphdb"
homepage = "https://github.com/asheshgoplani/opengraphdb"
documentation = "https://docs.rs/ogdb-core"
keywords = ["graph", "vector", "database", "embedded", "agent"]
categories = ["database", "data-structures", "science"]
readme = "README.md"
rust-version = "1.88"

# EVAL-RUST-QUALITY-CYCLE2 H10 (HIGH): centralise common dep pins so a bump
# touches one line, not eight. Each crate Cargo.toml references these via
# `serde.workspace = true` etc. Crates that need extra features layer them
# in per-crate (e.g. the napi/pyo3 feature flags stay local).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# EVAL-RUST-QUALITY-CYCLE3 H13: bumped 1 → 2 to consolidate Cargo.lock
# (transitive deps already pulled thiserror 2; we shipped two majors).
thiserror = "2"
tempfile = "3"
libc = "0.2"
proptest = { version = "1", default-features = false, features = ["std"] }

# EVAL-RUST-QUALITY-CYCLE2 H11 (HIGH): single source of truth for safety- and
# discipline-oriented lints. Each crate Cargo.toml opts in with
# `[lints] workspace = true`. Noisy lint groups (clippy::pedantic, the cast
# group, must_use_candidate) are tracked as follow-ups (cycle 3) — enabling
# them today would generate hundreds of warnings in ogdb-core and break the
# `cargo clippy -- -D warnings` gate. The two below are the highest-leverage
# safety lints that already fit cleanly into the workspace.
[workspace.lints.rust]
# EVAL-RUST-QUALITY-CYCLE4 H6: deny so a future per-site
# `#[allow(unsafe_op_in_unsafe_fn)]` becomes a visible diff in code
# review. The cycle-3 H7 macro-scoped allows on ogdb-node /
# ogdb-python (`#![cfg_attr(feature = "node", allow(...))]`) are
# unaffected — they remain feature-gated.
unsafe_op_in_unsafe_fn = "deny"
# `cfg(coverage)` is set by `cargo llvm-cov` instrumentation in ogdb-core's
# coverage harness. Declaring it here keeps `unexpected_cfgs` quiet.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"
# Style lints surfaced by clippy 1.88+ that trip on widespread pre-existing
# patterns (~hundreds of sites). Cleanup tracked as a follow-up slice; allowed
# here so the workspace -D warnings gate stays green.
uninlined_format_args = "allow"
only_used_in_recursion = "allow"
duplicated_attributes = "allow"
# EVAL-RUST-QUALITY-CYCLE3 H6 → CYCLE4 B2: cycle 3 added the cast /
# must_use / pedantic discipline as `allow` with the stated intent of
# flipping individual entries to `warn` per cycle. Cycle 4 lands the
# first three flips; `cast_possible_truncation` stays at allow with a
# documented cycle-5 ratchet (surfaces ~300 sites in ogdb-core's
# WAL-replay path). With `cargo clippy -- -D warnings`, every `warn`
# here is a hard CI gate.
#
# Pedantic-as-warn would generate ~hundreds of warnings in ogdb-core
# (proven by experimentation) and is gated as a per-cycle ratchet.
pedantic = { level = "allow", priority = -1 }
# EVAL-RUST-QUALITY-CYCLE4 B2: flipped to `warn`. Mechanical sites
# tagged with `#[must_use]` or `#[allow(clippy::must_use_candidate)]`
# inline; the rest already returned values are consumed by callers.
must_use_candidate = "warn"
# EVAL-RUST-QUALITY-CYCLE4 B2: flipped to `warn`. Suggests `From::from`
# / `as`-replacement on widening casts that never lose information.
cast_lossless = "warn"
# EVAL-RUST-QUALITY-CYCLE4 B2: flipped to `warn`. Surfaces signed →
# unsigned casts where the source value is non-negative by construction
# (loop counters, lengths). Per-site `#[allow]` documents the proof.
cast_sign_loss = "warn"
# EVAL-RUST-QUALITY-CYCLE5 ratchet: ~300 `u64 as usize` truncation
# sites in ogdb-core. Closing this is a 1-day cleanup
# (`usize::try_from(x).expect("u64 fits on 64-bit")`); the cycle-5
# eval is the forcing function.
cast_possible_truncation = "allow"

# Cross-crate inlining for the IS-1 hot path. The 5 ogdb-core-split-* refactors
# (vector/algorithms/text/temporal/import) moved plain-data types and pure
# helpers out of ogdb-core into sibling crates; without LTO the optimizer does
# not inline across crate boundaries, which costs ~25% on the 1-hop Cypher
# property-fetch benchmark.
[profile.release]
lto = "thin"
codegen-units = 1
