[package]
name = "ogdb-algorithms"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "OpenGraphDB graph algorithms (shortest path, subgraph extraction, traversal options)."
keywords = ["graph", "database", "opengraphdb", "algorithms", "shortest-path"]
categories = ["algorithms", "data-structures"]

[dependencies]

