[package]
name = "ogdb-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ogdb-core = { path = "../ogdb-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "rag_benchmark"
harness = false

[dev-dependencies]
libc = "0.2"
tempfile = "3"
criterion = "0.5"
