[package]
name = "ogdb-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ogdb-core = { path = "../ogdb-core" }
serde.workspace = true
serde_json.workspace = true

[[bench]]
name = "rag_benchmark"
harness = false

[dev-dependencies]
libc.workspace = true
tempfile.workspace = true
criterion = "0.5"

[lints]
workspace = true
