[package]
name = "ogdb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ogdb"
path = "src/main.rs"

[features]
default = []
grpc = ["dep:tokio", "dep:tonic"]

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
ogdb-bolt = { path = "../ogdb-bolt" }
ogdb-core = { path = "../ogdb-core" }
oxrdf = "0.3.3"
oxrdfio = "0.2.3"
prometheus = { version = "0.13", default-features = false }
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
tonic = { version = "0.12", features = ["transport"], optional = true }
