[package]
name = "ogdb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "ogdb"
path = "src/main.rs"

[features]
default = []
grpc = ["dep:tokio", "dep:tonic"]

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
include_dir = "0.7"
ogdb-bolt = { path = "../ogdb-bolt", version = "0.4.0" }
ogdb-core = { path = "../ogdb-core", version = "0.4.0" }
oxrdf = "0.3.3"
oxrdfio = "0.2.3"
prometheus = { version = "0.13", default-features = false }
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
tonic = { version = "0.12", features = ["transport"], optional = true }
webbrowser = "1"

[dev-dependencies]
tempfile = "3"
