[package]
name = "ogdb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = ["vector-search", "fulltext-search", "document-ingest"]
vector-search = ["dep:instant-distance"]
fulltext-search = ["dep:tantivy"]
document-ingest = ["ogdb-import/document-ingest"]
tracing = ["dep:tracing"]
wasm-bindings = ["dep:wasm-bindgen"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dependencies]
ogdb-vector = { path = "../ogdb-vector", version = "0.4.0" }
ogdb-algorithms = { path = "../ogdb-algorithms", version = "0.4.0" }
ogdb-text = { path = "../ogdb-text", version = "0.4.0" }
ogdb-temporal = { path = "../ogdb-temporal", version = "0.4.0" }
ogdb-types = { path = "../ogdb-types", version = "0.4.0" }
ogdb-import = { path = "../ogdb-import", version = "0.4.0", default-features = false }
ogdb-export = { path = "../ogdb-export", version = "0.4.0" }
lz4_flex = "0.11.6"
instant-distance = { version = "0.6.1", optional = true }
roaring = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = { version = "0.25", optional = true }
tracing = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
winnow = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = "0.13"

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }
