[package]
name = "ogdb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Embedded Cypher-speaking property-graph database core: storage, query, indexes, vector + full-text search."
keywords = ["graph", "database", "cypher", "embedded", "vector"]
categories = ["database-implementations", "data-structures"]

[features]
default = ["vector-search", "fulltext-search", "document-ingest"]
vector-search = ["dep:instant-distance"]
fulltext-search = ["dep:tantivy"]
document-ingest = ["ogdb-import/document-ingest"]
tracing = ["dep:tracing"]
wasm-bindings = ["dep:wasm-bindgen"]

[lints]
# Inherits `unexpected_cfgs` (cfg(coverage)) and the workspace safety/discipline
# lints (unsafe_op_in_unsafe_fn, undocumented_unsafe_blocks) from the root
# Cargo.toml. See EVAL-RUST-QUALITY-CYCLE2 H11.
workspace = true

[dependencies]
ogdb-vector = { path = "../ogdb-vector" }
ogdb-algorithms = { path = "../ogdb-algorithms" }
ogdb-text = { path = "../ogdb-text" }
ogdb-temporal = { path = "../ogdb-temporal" }
ogdb-types = { path = "../ogdb-types" }
ogdb-import = { path = "../ogdb-import", default-features = false }
ogdb-export = { path = "../ogdb-export" }
lz4_flex = "0.11.6"
instant-distance = { version = "0.6.1", optional = true }
roaring = "0.10"
serde.workspace = true
serde_json.workspace = true
tantivy = { version = "0.25", optional = true }
tracing = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
winnow = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = "0.13"

[dev-dependencies]
proptest.workspace = true
