[package]
name = "ogdb-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ogdb-core = { path = "../ogdb-core" }
ogdb-cli = { path = "../ogdb-cli" }
ogdb-bolt = { path = "../ogdb-bolt" }
serde_json.workspace = true

[lints]
workspace = true
