[package]
name = "ogdb-eval"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ogdb-core = { path = "../ogdb-core", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
libc = "0.2"
tempfile = "3"
