[package]
name = "ogdb-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ogdb-core = { path = "../ogdb-core", default-features = false }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
libc = "0.2"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"

[features]
default = ["llm-anthropic"]
llm-anthropic = ["dep:reqwest"]
llm-openai = ["dep:reqwest"]
llm-local = ["dep:reqwest"]
