[package]
name = "ogdb-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
# EVAL-RUST-QUALITY-CYCLE3 H10: see ogdb-bench/Cargo.toml.
rust-version.workspace = true
description = "OpenGraphDB evaluation harness — internal, publish=false."
publish = false

[dependencies]
ogdb-core = { path = "../ogdb-core", default-features = false }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
libc.workspace = true
tempfile.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"

[features]
default = ["llm-anthropic"]
llm-anthropic = ["dep:reqwest"]
llm-openai = ["dep:reqwest"]
llm-local = ["dep:reqwest"]

[lints]
workspace = true
