[package]
name = "ogdb-fuzz"
version.workspace = true
edition.workspace = true
license.workspace = true
# EVAL-RUST-QUALITY-CYCLE3 H10: see ogdb-bench/Cargo.toml.
rust-version.workspace = true
description = "OpenGraphDB fuzzing harness — internal, publish=false."
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
tempfile.workspace = true
toml = { version = "0.8", default-features = false, features = ["parse"] }

[lints]
workspace = true
