[package]
name = "ogdb-import"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = ["document-ingest"]
document-ingest = ["dep:lopdf", "dep:pulldown-cmark"]

[dependencies]
serde = { version = "1", features = ["derive"] }
lopdf = { version = "0.34", optional = true }
pulldown-cmark = { version = "0.13", optional = true }

[dev-dependencies]
serde_json = "1"
