[package]
name = "ogdb-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ogdb_node"
crate-type = ["cdylib", "rlib"]

[features]
default = []
node = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[dependencies]
ogdb-core = { path = "../ogdb-core" }
ogdb-cli = { path = "../ogdb-cli" }
napi = { version = "2", optional = true, default-features = false, features = ["napi6", "serde-json"] }
napi-derive = { version = "2", optional = true }
serde_json = "1"

[build-dependencies]
napi-build = { version = "2", optional = true }
