[package]
name = "ogdb-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
name = "ogdb_node"
crate-type = ["cdylib", "rlib"]

[features]
default = []
node = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[dependencies]
ogdb-core = { path = "../ogdb-core", version = "0.4.0" }
ogdb-cli = { path = "../ogdb-cli", version = "0.4.0" }
napi = { version = "2", optional = true, default-features = false, features = ["napi6", "serde-json"] }
napi-derive = { version = "2", optional = true }
serde_json = "1"

[build-dependencies]
napi-build = { version = "2", optional = true }
