[package]
name = "ogdb-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "OpenGraphDB Node.js bindings (napi-rs-based)."
keywords = ["graph", "database", "opengraphdb", "nodejs", "napi"]
categories = ["api-bindings", "database"]

[lib]
name = "ogdb_node"
crate-type = ["cdylib", "rlib"]

[features]
default = []
node = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[dependencies]
# C2-A1: version pins required for `cargo publish`.
ogdb-core = { path = "../ogdb-core", version = "0.4.0" }
ogdb-cli = { path = "../ogdb-cli", version = "0.4.0" }
napi = { version = "2", optional = true, default-features = false, features = ["napi6", "serde-json"] }
napi-derive = { version = "2", optional = true }
serde_json.workspace = true

[build-dependencies]
napi-build = { version = "2", optional = true }

[lints]
workspace = true
