[package]
name = "ogdb-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "OpenGraphDB Python bindings (pyo3-based)."
keywords = ["graph", "database", "opengraphdb", "python", "pyo3"]
categories = ["api-bindings", "database"]

[lib]
name = "ogdb_python"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3"]
extension-module = ["python", "pyo3/extension-module"]

[dependencies]
# C2-A1: version pins required for `cargo publish`.
ogdb-core = { path = "../ogdb-core", version = "0.4.0" }
ogdb-cli = { path = "../ogdb-cli", version = "0.4.0" }
pyo3 = { version = "0.21", optional = true, features = ["abi3-py39"] }
serde_json = "1"
