[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "opengraphdb"
version = "0.1.0"
description = "Python bindings for OpenGraphDB"
requires-python = ">=3.9"

[tool.maturin]
module-name = "opengraphdb"
bindings = "pyo3"
features = ["python", "extension-module"]
