[package]
name = "ogdb-tck"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
cucumber = "0.21"
ogdb-core = { path = "../ogdb-core" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
walkdir = "2"

[lints]
workspace = true
