[package]
name = "ogdb-tck"
version.workspace = true
edition.workspace = true
license.workspace = true
# EVAL-RUST-QUALITY-CYCLE3 H10: see ogdb-bench/Cargo.toml.
rust-version.workspace = true
description = "OpenGraphDB TCK (technology compatibility kit) harness — internal, publish=false."
publish = false

[dependencies]
cucumber = "0.21"
ogdb-core = { path = "../ogdb-core" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
walkdir = "2"

[lints]
workspace = true
