[package]
name = "ogdb-temporal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "OpenGraphDB temporal-scope filters (valid-time / system-time bitemporal edge model)."
keywords = ["graph", "database", "opengraphdb", "temporal", "bitemporal"]
categories = ["data-structures", "database"]
