[package]
name = "ogdb-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
ogdb-vector = { path = "../ogdb-vector", version = "0.4.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
