[package]
name = "ogdb-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "OpenGraphDB shared property-graph value types (PropertyValue, PropertyMap, RecordBatch)."
keywords = ["graph", "database", "opengraphdb", "property", "types"]
categories = ["data-structures", "database"]

[dependencies]
# C2-A1: version pin required for `cargo publish` (path-only is rejected).
ogdb-vector = { path = "../ogdb-vector", version = "0.4.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
